<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/loginFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/stepImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/step1"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_below="@+id/stepImage"
                    android:layout_above="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="55dp"
                        android:layout_marginRight="55dp"
                        android:layout_marginTop="60dp"
                        android:clickable="false"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_margin="10dp"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            app:srcCompat="@drawable/logo" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/xml_edittext_bottomline">

                            <EditText
                                android:id="@+id/accesscode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:background="@android:color/transparent"
                                android:backgroundTint="@android:color/transparent"
                                android:gravity="center"
                                android:hint="@string/hint_enteraccesscode"
                                android:inputType="textCapWords|textPersonName"
                                android:maxLines="1"
                                android:paddingBottom="8dp"
                                android:paddingLeft="4dp"
                                android:paddingRight="4dp"
                                android:paddingTop="4dp"
                                android:textSize="16sp" />
                        </FrameLayout>

                        <Button
                            android:id="@+id/submitButton"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"
                            android:layout_alignParentBottom="true"
                            android:layout_centerInParent="true"
                            android:layout_margin="20dp"
                            android:background="@color/colorAccent"
                            android:text="@string/button_verify"
                            android:textColor="#ffffff" />
                    </LinearLayout>

                </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/admob_banner_id" />
        </RelativeLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/otpFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="1"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="38sp" />

            <EditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="60dp"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:hint="@string/hint_enterotp"
                android:inputType="number"
                android:maxLines="1"
                android:background="@drawable/xml_edittext_bottomline"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/otpDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/text_otpdetail"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <Button
                android:id="@+id/submitOTP"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="120dp"
                android:background="@color/colorAccent"
                android:text="@string/button_enter"
                android:textColor="#ffffff" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>