<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="6dp"
    android:elevation="3dp"
    card_view:cardCornerRadius="4dp">
    <!--android:background="#fafafa"-->

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <WebView
                android:id="@+id/youtubeViewWebView"
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:minHeight="120dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/showTagView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tagNames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText" />

                <TextView
                    android:id="@+id/postCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#808080"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e6e6e6" />

            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:padding="10dp"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e6e6e6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/shareButtonView"
                    style="@style/PB_Layout">

                    <ImageView
                        style="@style/PB_Icon"
                        android:src="@drawable/ic_share" />

                    <TextView
                        style="@style/PB_Title"
                        android:text="@string/title_share" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/likeButtonView"
                    style="@style/PB_Layout">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/likeImageView"
                            style="@style/PB_Icon"
                            android:src="@drawable/ic_like" />

                        <TextView
                            android:id="@+id/totalLike"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:textColor="#808080"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <TextView
                        style="@style/PB_Title"
                        android:text="@string/title_like" />
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/commentButtonView"
                    style="@style/PB_Layout">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/PB_Icon"
                            android:src="@drawable/ic_comment" />

                        <TextView
                            android:id="@+id/totalComment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="#808080"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <TextView
                        style="@style/PB_Title"
                        android:text="@string/title_comment" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gulakButtonView"
                    style="@style/PB_Layout">

                    <ImageView
                        android:id="@+id/gulakImageView"
                        style="@style/PB_Icon"
                        android:src="@drawable/ic_sanrakhit_karey" />

                    <TextView
                        style="@style/PB_Title"
                        android:text="@string/title_gulak" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</android.support.v7.widget.CardView>
